<resources>
    <string name="app_name">Inventory Tracking</string>
    <string name="host_url">http://192.168.0.101:8004</string>
    <string name="turn_on_flashlight">Turn On Flashlight</string>
    <string name="turn_off_flashlight">Turn Off Flashlight</string>
    <string name="scan_inventory">Scan Inventory</string>
    <string name="look_up_inventory">Look Up Inventory</string>
    <string name="local_inventory">Local Inventory</string>
    <string name="remote_inventory">Remote Inventory</string>
    <string name="upload_scanned_inventory">Upload Inventory</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="skip">Skip</string>
    <string name="logs">Logs</string>
    <string name="date_format">yyyy-MM-dd hh:mm:ss a</string>
    <string name="scan_time">Scanned</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload</string>
    <string name="debug">true</string>
    <string name="default_machine_settings">Machine Settings</string>

    <string name="machine_name_text">Machine Name</string>
    <string name="building_text">Building</string>
    <string name="department_text">Department</string>
    <string name="floor_text">Floor</string>
    <string name="room_text">Room</string>
    <string name="machine_status_text">Machine Status</string>

    <string name="save_settings">Save Settings</string>
    <string name="machine_settings">machineSettings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_session">user_session</string>
    <string name="user">user</string>
    <string name="user_groups">groups</string>

    <string name="upload_message">Are you sure you want to upload machines?</string>
    <string name="delete_message">Are you sure you want to delete this machine?</string>
    <string name="scanning">Continue Scanning</string>
    <string name="swap_machine">Swap Machine</string>
    <string name="dashboard">Dashboard</string>

    <string name="csrf_token">X-CSRF-Token</string>
    <string name="cookie">Cookie</string>
    <string name="set_cookie">Set-Cookie</string>

    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="search_user">Search User...</string>
    <string name="clear">Clear</string>
    <string name="filter">Filter</string>
    <string name="operation">Operation</string>
    <string name="sort_date">Sort Date</string>
    <string name="entered_by_text">Entered By</string>
</resources>
