<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.80"></ListView>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:orientation="horizontal" >

        <android.support.design.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/btn1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="editMachine"
            android:text="@string/edit" />

        <android.support.design.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/btn2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="swapMachine"
            android:text="@string/swap_machine" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:orientation="horizontal" >

        <android.support.design.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/btn4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="continueScanning"
            android:text="@string/scanning" />

        <android.support.design.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/btn3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="dashboard"
            android:text="@string/dashboard" />

    </LinearLayout>
</LinearLayout>